TestSuite/PascalABCTests/errors/err0336.pas
begin
  var s := $'{1}}';
end.